feat(agent): implement memory info, detailed for windows
