# agent/internal/model/windows/hardware_details.go
@@ -3,16 +3,21 @@
 package model
 
 type WinPhysicalMemory struct {
-	BankLabel     string `json:"bankLabel"`
-	Capacity      uint64 `json:"capacity"`
-	DataWidth     uint16 `json:"dataWidth"`
-	Description   string `json:"description"`
-	DeviceLocator string `json:"deviceLocator"`
-	FormFactor    int    `json:"formFactor"`
-	Speed         uint32
-	Manufacturer  string `json:"manufacturer"`
-	Model         string `json:"model"`
-	PartNumber    string `json:"partNumber"`
+	BankLabel            string
+	Capacity             uint64 // объем памяти
+	ConfiguredClockSpeed uint32 // настроенная частота памяти
+	DeviceLocator        string // расположение памяти
+	FormFactor           uint16 // форм-фактор памяти
+	HotSwappable         bool   // можно менять память без выключения системы
+	Manufacturer         string // производитель
+	// MemoryType           uint16  // тип памяти, некорректный в wmi
+	Name             string // название памяти
+	PartNumber       string // модель памяти
+	Removable        bool   // можно ли вынимать память
+	Replaceable      bool   // можно ли заменять память
+	SerialNumber     string // серийный номер
+	Speed            uint32 // поддерживаемя частота памяти
+	SMBIOSMemoryType uint16 // тип памяти по smbios, нужно маппить
 }
 
 type WinProcessor struct {
